# rins23

./: .clang-format  .gitignore  README.md  compile_pcl.sh
src/exercise3/: CMakeLists.txt
src/exercise3/launch/: amcl_simulation.launch  rins_world.launch
src/exercise3/worlds/: rins.world
src/homework3/: CMakeLists.txt  package.xml
src/homework3/config/: map.pgm
src/homework3/launch/: amcl_simulation.launch  combined.launch
src/homework3/maps/: map1.yaml
src/homework3/testable_maps/: map1.pgm
src/task1/: CMakeLists.txt  package.xml
src/task1/config/: amcl_config.yaml  map.yaml
src/task1/launch/: amcl_simulation.launch  combined.launch  rins_world.launch
src/task1/maps/: map2.yaml
src/task1/msg/: FacePositionMessage.msg
src/task1/scripts/: face_localizer_dnn
src/task1/src/: map_goals.cpp  navigator.cpp
src/task1/testable_maps/: map2.pgm  map2_edited.pgm  map2_edited.yaml  rins_map.pgm  rins_map.yaml
src/task1/worlds/: rins.world
src/task1_real/: CMakeLists.txt  package.xml
src/task1_real/config/: amcl_config.yaml  real_map.pgm  real_map.yaml
src/task1_real/launch/: amcl_simulation.launch
src/task1_real/scripts/: face_localizer_dnn
src/task1_real/src/: navigator.cpp
src/task2/: CMakeLists.txt  package.xml
src/task2/config/: amcl_config.yaml  map2_edited.pgm
src/task2/launch/: amcl_simulation.launch  circles.launch  combined.launch  detectors.launch  ground.launch  rins_world.launch
src/task2/msg/: RingPoseMsg.msg
src/task2/scripts/: cluster_rings  clustering.py  rings.py
src/task2/src/: cylinder.cpp  ground_ring.cpp  navigator.cpp  ring_detection.cpp
src/task2/worlds/: rins.world
src/task3/: CMakeLists.txt  package.xml
src/task3/config/: amcl_config.yaml  map2_edited.pgm
src/task3/launch/: amcl_simulation.launch  combined.launch  polygon.launch  ring_detection.launch  rins_world.launch  sensing.launch
src/task3/launch/includes/: kobuki.arm.launch.xml  kobuki.launch.xml
src/task3/msg/: ColorMsg.msg  FacePositionMsg.msg  PosterContentMsg.msg
src/task3/scripts/: clustering.py  costmap.txt  dialogue.py  face_posters.py  fine_approach.py  fine_parking.py  move_arm.py  point_generator.py  test.py  test2.py
src/task3/src/: cylinder_detection.cpp  ground_ring_detection.cpp  navigator.cpp  navigator_fsm.h  ring_detection.cpp
src/task3/srv/: ArmExtendSrv.srv  ArmParkingSrv.srv  CylinderFaceSrv.srv  FaceDialogueSrv.srv  FineApproachSrv.srv  PosterExplorationSrv.srv
src/task3/worlds/: rins.world
utils/: points.py  rins_2022_task2_p1.txt  rins_task2_final.txt  rins_task3_testing.txt  task1_real.txt  testing_t3_points.txt  worldtomap.py
